force-app/main/default/objects/Program__c/fields/Add_Opportunity_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Add_Opportunity_to_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Opportunity name will print on the Invoice PDF.</inlineHelpText>
    <label>Add Opportunity to Invoice</label>
    <type>Checkbox</type>
</CustomField>