force-app/main/default/objects/Program__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>