force-app/main/default/objects/Program__c/fields/Consulting_NestUnit_ID__c.field-meta.xml
<CustomField>
    <fullName>Consulting_NestUnit_ID__c</fullName>
    <label>Consulting NestUnit ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>