force-app/main/default/objects/Program__c/fields/Consulting_QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Consulting_QB_Class_Id__c</fullName>
    <label>Consulting QB Class Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>