force-app/main/default/objects/Program__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>