force-app/main/default/objects/Program__c/fields/DepartmentName__c.field-meta.xml
<CustomField>
    <fullName>DepartmentName__c</fullName>
    <formula>Department__r.Name</formula>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>