force-app/main/default/objects/Program__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>200</length>
    <type>Text</type>
</CustomField>