force-app/main/default/objects/Program__c/fields/External_Parent_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Parent_Program_Id__c</fullName>
    <formula>Parent_Program__r.External_Record_Id__c</formula>
    <label>External Parent Program Id</label>
    <type>Text</type>
</CustomField>