force-app/main/default/objects/Program__c/fields/G_A__c.field-meta.xml
<CustomField>
    <fullName>G_A__c</fullName>
    <defaultValue>0</defaultValue>
    <label>G&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>