force-app/main/default/objects/Program__c/fields/Ivory_Coast_NestUnit_ID__c.field-meta.xml
<CustomField>
    <fullName>Ivory_Coast_NestUnit_ID__c</fullName>
    <label>Ivory Coast NestUnit ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>