force-app/main/default/objects/Program__c/fields/Ivory_Coast_QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Ivory_Coast_QB_Class_Id__c</fullName>
    <label>Ivory Coast QB Class Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>