force-app/main/default/objects/Program__c/fields/Ivory_Coast_QB_Entity__c.field-meta.xml
<CustomField>
    <fullName>Ivory_Coast_QB_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ivory Coast (QB Entity)</label>
    <type>Checkbox</type>
</CustomField>