force-app/main/default/objects/Program__c/fields/Lead_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Lead_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Opt Out</label>
    <type>Checkbox</type>
</CustomField>