force-app/main/default/objects/Program__c/fields/Months_for_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Months_for_Audit_Date__c</fullName>
    <label>Months for Audit Date</label>
    <type>Date</type>
</CustomField>