force-app/main/default/objects/Program__c/fields/Need_Bundle_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Need_Bundle_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this field for Departments if you need 2 certificates from 1 Project</inlineHelpText>
    <label>Need Bundle Opportunity</label>
    <type>Checkbox</type>
</CustomField>