force-app/main/default/objects/Program__c/fields/Nest_Link__c.field-meta.xml
<CustomField>
    <fullName>Nest_Link__c</fullName>
    <formula>&quot;https://nest.scscertified.com/ums/units/&quot; &amp; IF(ISBLANK(Nest_Unit_ID__c), &quot;?search=&quot; &amp; Name, Nest_Unit_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nest Link</label>
    <type>Text</type>
</CustomField>