force-app/main/default/objects/Program__c/fields/Nest_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Nest_Unit_ID__c</fullName>
    <label>Nest Unit ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>