force-app/main/default/objects/Program__c/fields/Parent_Program__c.field-meta.xml
<CustomField>
    <fullName>Parent_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>