force-app/main/default/objects/Program__c/fields/Parent_Program_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Program_Text__c</fullName>
    <description>DO NOT DELETE without reviewing Sharing Rules for Program object. Text version of look-up field. This value is populated via a Workflow and then used in Sharing rules.</description>
    <inlineHelpText>For internal IT use only</inlineHelpText>
    <label>Parent Program Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>