force-app/main/default/objects/Program__c/fields/ProgramCertificationSequence__c.field-meta.xml
<CustomField>
    <fullName>ProgramCertificationSequence__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Program Certification Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>