force-app/main/default/objects/Program__c/fields/ProgramShortName__c.field-meta.xml
<CustomField>
    <fullName>ProgramShortName__c</fullName>
    <label>Program Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>