force-app/main/default/objects/Program__c/fields/QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Class_Id__c</fullName>
    <label>QB Class Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>