force-app/main/default/objects/Program__c/fields/R_D_Source__c.field-meta.xml
<CustomField>
    <fullName>R_D_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sourced by R&amp;D</label>
    <type>Checkbox</type>
</CustomField>