force-app/main/default/objects/Program__c/fields/Reporting_Division__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Division__c</fullName>
    <label>Reporting Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>