force-app/main/default/objects/Program__c/fields/SCS_Consulting_QB_Entity__c.field-meta.xml
<CustomField>
    <fullName>SCS_Consulting_QB_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCS Consulting (QB Entity)</label>
    <type>Checkbox</type>
</CustomField>