force-app/main/default/objects/Program__c/fields/SCS_Global_QB_Entity__c.field-meta.xml
<CustomField>
    <fullName>SCS_Global_QB_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCS Global (QB Entity)</label>
    <type>Checkbox</type>
</CustomField>