force-app/main/default/objects/Program__c/fields/SubScopeHeader__c.field-meta.xml
<CustomField>
    <fullName>SubScopeHeader__c</fullName>
    <label>Sub Scope Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>