force-app/main/default/objects/Program__c/fields/Target_Audit_Date_for_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Audit_Date_for_Next_Year__c</fullName>
    <label>Target Audit Date for Next Year</label>
    <type>Date</type>
</CustomField>