force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Department__c</columns>
    <columns>Parent_Program__c</columns>
    <columns>Nest_Unit_ID__c</columns>
    <columns>Nest_Link__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>