force-app/main/default/objects/Program__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Parent_Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>ECS</value>
    </filters>
    <label>ECS</label>
</ListView>