force-app/main/default/objects/Program__c/listViews/Cosulting.listView-meta.xml
<ListView>
    <fullName>Cosulting</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Parent_Program__c</columns>
    <columns>Consulting_NestUnit_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>SCS Consulting</value>
    </filters>
    <label>Cosulting</label>
</ListView>