force-app/main/default/objects/Program__c/listViews/FA.listView-meta.xml
<ListView>
    <fullName>FA</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Parent_Program__c</columns>
    <columns>Division__c</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>Food and Agriculture</value>
    </filters>
    <label>FA</label>
</ListView>