force-app/main/default/objects/Program__c/listViews/NR.listView-meta.xml
<ListView>
    <fullName>NR</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Parent_Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>Natural Resources</value>
    </filters>
    <label>NR</label>
</ListView>